chore: update translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 съвместим/съвместим",
-  "src44_info": "SRC44 е стандартът за структурирана информация в полетата за описание. Други приложения също могат да визуализират тази информация."
+  "src44_info": "SRC44 е стандартът за структурирана информация в полетата за описание. Други приложения също могат да визуализират тази информация.",
+  "account_details": "детайли за акаунта",
+  "account_profile": "Профил",
+  "alias_buyer": "Купувач",
+  "alias_cancel_sale": "Отмяна на продажбата на псевдоним",
+  "alias_content_format": "Формат на съдържанието",
+  "alias_direct_offer": "Този псевдоним е директна оферта",
+  "alias_off_sale": "Не е за продажба",
+  "alias_on_sale": "Този псевдоним се продава",
+  "alias_on_sale_private": "Директна оферта",
+  "alias_on_sale_public": "Публична оферта",
+  "alias_price": "Цена",
+  "alias_ref": "Справка за псевдоним",
+  "alias_status": "Статус",
+  "alias_taken": "Този псевдоним вече е зает",
+  "asset_trade": "Търгувайте на SignumSwap",
+  "can-buy-alias": "Псевдонимът се продава и може да бъде закупен. Щракнете върху „Купете“, ако желаете да придобиете псевдонима",
+  "created": "Създаден",
+  "edit_alias": "Редактиране на псевдоним",
+  "edit_alias_content": "Редактиране на съдържанието",
+  "enter_account_id": "Въведете ID на акаунта",
+  "enter_alias_name": "Въведете име на псевдоним",
+  "enter_alias_ref": "Въведете референтно име на псевдоним",
+  "enter_recipient": "Въведете адрес, идентификатор на акаунт или псевдоним",
+  "is_private_offer_q": "Директна оферта ли е?",
+  "more_alias_on": "Повече за псевдонимите на",
+  "is_private_offer_hint": "Директната оферта е достъпна само за един получател. Получателят ще види офертата в своя списък с псевдоними.",
+  "no_aliases_available": "Няма налични псевдоними",
+  "owner": "Собственик",
+  "success_alias_buy": "Честито. Току-що си купихте нов псевдоним.",
+  "success_alias_cancel_sale": "Продажбата на псевдоним е анулирана успешно",
+  "success_alias_sell": "Псевдонимът е пуснат в продажба успешно.",
+  "success_alias_update": "Псевдонимът е актуализиран успешно.",
+  "verify_alias": "Проверете наличността",
+  "verify_alias_description": "Въведете псевдонима си и проверете наличността му",
+  "view": "Да видиш",
+  "view_alias": "Преглед на псевдоним"
 }
