--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Compatible/compatible amb SRC44",
-  "src44_info": "SRC44 és l'estàndard per a la informació estructurada en camps de descripció. Altres aplicacions també són capaços de visualitzar aquesta informació."
+  "src44_info": "SRC44 és l'estàndard per a la informació estructurada en camps de descripció. Altres aplicacions també són capaços de visualitzar aquesta informació.",
+  "account_details": "Detalls de la Compta",
+  "account_profile": "Perfil",
+  "alias_buyer": "Comprador",
+  "alias_cancel_sale": "Cancel·la la venda d'àlies",
+  "alias_content_format": "Format de contingut",
+  "alias_direct_offer": "Aquest àlies és una oferta directa",
+  "alias_off_sale": "No per a la venda",
+  "alias_on_sale": "Aquest àlies està a la venda",
+  "alias_on_sale_private": "Oferta directa",
+  "alias_on_sale_public": "Oferta Pública",
+  "alias_price": "Preu",
+  "alias_ref": "Referència d'àlies",
+  "alias_status": "Estat",
+  "alias_taken": "Aquest àlies ja està pres",
+  "asset_trade": "Comerç a SignumSwap",
+  "can-buy-alias": "L'àlies està a la venda i es pot adquirir. Feu clic a \"Compra\" si esteu disposat a adquirir l'àlies",
+  "created": "Creat",
+  "edit_alias": "Edita l'àlies",
+  "edit_alias_content": "Edita el contingut",
+  "enter_account_id": "Introduïu l'identificador del compte",
+  "enter_alias_name": "Introduïu el nom d'àlies",
+  "enter_alias_ref": "Introduïu el nom d'àlies de referència",
+  "enter_recipient": "Introduïu l'adreça, l'identificador del compte o el nom d'àlies",
+  "is_private_offer_q": "És una oferta directa?",
+  "more_alias_on": "Més informació sobre els àlies a",
+  "is_private_offer_hint": "Una oferta directa només està disponible per a un sol destinatari. El destinatari veurà l'oferta a la seva llista d'àlies.",
+  "no_aliases_available": "No hi ha àlies disponibles",
+  "owner": "Propietari",
+  "success_alias_buy": "Felicitats. Acabes de comprar un àlies nou.",
+  "success_alias_cancel_sale": "La venda d'àlies s'ha cancel·lat correctament",
+  "success_alias_sell": "Àlies posat a la venda amb èxit.",
+  "success_alias_update": "Àlies actualitzat correctament.",
+  "verify_alias": "Verifica la disponibilitat",
+  "verify_alias_description": "Escriviu el vostre nom d'àlies i comproveu-ne la disponibilitat",
+  "view": "Veure",
+  "view_alias": "Veure àlies"
 }
