--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 kompatibilní/kompatibilní",
-  "src44_info": "SRC44 je standard pro strukturované informace v polích popisu. Jiné aplikace jsou také schopny zobrazit tyto informace."
+  "src44_info": "SRC44 je standard pro strukturované informace v polích popisu. Jiné aplikace jsou také schopny zobrazit tyto informace.",
+  "account_details": "Detaily účtu",
+  "account_profile": "Profil",
+  "alias_buyer": "Kupující",
+  "alias_cancel_sale": "Zrušit prodej aliasu",
+  "alias_content_format": "Formát obsahu",
+  "alias_direct_offer": "Tento alias je přímá nabídka",
+  "alias_off_sale": "Není na prodej",
+  "alias_on_sale": "Tento alias je na prodej",
+  "alias_on_sale_private": "Přímá nabídka",
+  "alias_on_sale_public": "Veřejná nabídka",
+  "alias_price": "Cena",
+  "alias_ref": "Odkaz na alias",
+  "alias_status": "Postavení",
+  "alias_taken": "Tento alias je již obsazen",
+  "asset_trade": "Obchodujte na SignumSwap",
+  "can-buy-alias": "Alias je v prodeji a lze jej získat. Chcete-li alias získat, klikněte na 'Koupit'",
+  "created": "Vytvořeno",
+  "edit_alias": "Upravit alias",
+  "edit_alias_content": "Upravit obsah",
+  "enter_account_id": "Zadejte ID účtu",
+  "enter_alias_name": "Zadejte název aliasu",
+  "enter_alias_ref": "Zadejte název odkazovaného aliasu",
+  "enter_recipient": "Zadejte adresu, ID účtu nebo alias",
+  "is_private_offer_q": "Je přímá nabídka?",
+  "more_alias_on": "Více o aliasech na",
+  "is_private_offer_hint": "Přímá nabídka je dostupná pouze pro jednoho příjemce. Příjemce uvidí nabídku ve svém seznamu aliasů.",
+  "no_aliases_available": "Nejsou k dispozici žádné aliasy",
+  "owner": "Majitel",
+  "success_alias_buy": "Gratulujeme. Právě jste si koupili nový alias.",
+  "success_alias_cancel_sale": "Prodej aliasu byl úspěšně zrušen",
+  "success_alias_sell": "Alias byl úspěšně uveden do prodeje.",
+  "success_alias_update": "Alias byl úspěšně aktualizován.",
+  "verify_alias": "Ověřte dostupnost",
+  "verify_alias_description": "Zadejte název aliasu a zkontrolujte jeho dostupnost",
+  "view": "Vidět",
+  "view_alias": "Zobrazit alias"
 }
