--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44-konform/kompatibel",
-  "src44_info": "SRC44 ist der Standard für strukturierte Informationen in Beschreibungsfeldern. Auch andere Apps können diese Informationen visualisieren."
+  "src44_info": "SRC44 ist der Standard für strukturierte Informationen in Beschreibungsfeldern. Auch andere Apps können diese Informationen visualisieren.",
+  "account_details": "Kontodetails",
+  "account_profile": "Profil",
+  "alias_buyer": "Käufer",
+  "alias_cancel_sale": "Alias-Verkauf stornieren",
+  "alias_content_format": "Inhaltsformat",
+  "alias_direct_offer": "Dieser Alias ist ein direktes Angebot",
+  "alias_off_sale": "Nicht zu verkaufen",
+  "alias_on_sale": "Dieser Alias ist im Angebot",
+  "alias_on_sale_private": "Direktes Angebot",
+  "alias_on_sale_public": "Zu Kaufen",
+  "alias_price": "Preis",
+  "alias_ref": "Alias-Referenz",
+  "alias_status": "Status",
+  "alias_taken": "Dieser Alias ist bereits vergeben",
+  "asset_trade": "Handeln Sie auf SignumSwap",
+  "can-buy-alias": "Der Alias ist im Angebot und kann erworben werden. Klicken Sie auf „Kaufen“, wenn Sie bereit sind, den Alias zu erwerben",
+  "created": "Erstellt",
+  "edit_alias": "Alias bearbeiten",
+  "edit_alias_content": "Inhalt bearbeiten",
+  "enter_account_id": "Geben Sie die Konto-ID ein",
+  "enter_alias_name": "Geben Sie den Aliasnamen ein",
+  "enter_alias_ref": "Geben Sie den referenzierten Aliasnamen ein",
+  "enter_recipient": "Geben Sie Adresse, Konto-ID oder Aliasnamen ein",
+  "is_private_offer_q": "Ist Direktangebot?",
+  "more_alias_on": "Mehr zu Aliases auf",
+  "is_private_offer_hint": "Ein Direktangebot ist nur für einen einzelnen Empfänger verfügbar. Der Empfänger sieht das Angebot in seiner Alias-Liste.",
+  "no_aliases_available": "Keine Aliase verfügbar",
+  "owner": "Inhaber",
+  "success_alias_buy": "Herzliche Glückwünsche. Sie haben gerade einen neuen Alias gekauft.",
+  "success_alias_cancel_sale": "Alias-Verkauf erfolgreich storniert",
+  "success_alias_sell": "Alias erfolgreich zum Verkauf eingestellt.",
+  "success_alias_update": "Alias erfolgreich aktualisiert.",
+  "verify_alias": "Verfügbarkeit prüfen",
+  "verify_alias_description": "Geben Sie Ihren Aliasnamen ein und überprüfen Sie seine Verfügbarkeit",
+  "view": "Anzeigen",
+  "view_alias": "Alias anzeigen"
 }
