--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Συμβατό/συμβατό με SRC44",
-  "src44_info": "Το SRC44 είναι το πρότυπο για δομημένες πληροφορίες στα πεδία περιγραφής. Άλλες εφαρμογές μπορούν επίσης να απεικονίσουν αυτές τις πληροφορίες."
+  "src44_info": "Το SRC44 είναι το πρότυπο για δομημένες πληροφορίες στα πεδία περιγραφής. Άλλες εφαρμογές μπορούν επίσης να απεικονίσουν αυτές τις πληροφορίες.",
+  "account_details": "λεπτομέρειες λογαριασμού",
+  "account_profile": "Προφίλ",
+  "alias_buyer": "Αγοραστής",
+  "alias_cancel_sale": "Ακύρωση πώλησης ψευδώνυμου",
+  "alias_content_format": "Μορφή περιεχομένου",
+  "alias_direct_offer": "Αυτό το Alias είναι μια άμεση προσφορά",
+  "alias_off_sale": "Δεν είναι προς πώληση",
+  "alias_on_sale": "Αυτό το Alias είναι προς πώληση",
+  "alias_on_sale_private": "Άμεση Προσφορά",
+  "alias_on_sale_public": "Δημόσια Πρόταση",
+  "alias_price": "Τιμή",
+  "alias_ref": "Αναφορά ψευδώνυμου",
+  "alias_status": "Κατάσταση",
+  "alias_taken": "Αυτό το ψευδώνυμο έχει ήδη ληφθεί",
+  "asset_trade": "Συναλλαγές στο SignumSwap",
+  "can-buy-alias": "Το Alias είναι προς πώληση και μπορεί να αποκτηθεί. Κάντε κλικ στο «Αγορά» εάν είστε διατεθειμένοι να αποκτήσετε το ψευδώνυμο",
+  "created": "Δημιουργήθηκε",
+  "edit_alias": "Επεξεργαστείτε το ψευδώνυμο",
+  "edit_alias_content": "Επεξεργασία Περιεχομένου",
+  "enter_account_id": "Εισαγάγετε το αναγνωριστικό λογαριασμού",
+  "enter_alias_name": "Εισαγάγετε το ψευδώνυμο",
+  "enter_alias_ref": "Εισαγάγετε το Αναφερόμενο ψευδώνυμο",
+  "enter_recipient": "Εισαγάγετε διεύθυνση, αναγνωριστικό λογαριασμού ή ψευδώνυμο",
+  "is_private_offer_q": "Είναι η άμεση προσφορά;",
+  "more_alias_on": "Περισσότερα για τα ψευδώνυμα στο",
+  "is_private_offer_hint": "Η Άμεση Προσφορά είναι διαθέσιμη μόνο για έναν μόνο παραλήπτη. Ο παραλήπτης θα δει την προσφορά στη λίστα του Alias.",
+  "no_aliases_available": "Δεν υπάρχουν διαθέσιμα ψευδώνυμα",
+  "owner": "Ιδιοκτήτης",
+  "success_alias_buy": "Συγχαρητήρια. Μόλις αγοράσατε ένα νέο Alias.",
+  "success_alias_cancel_sale": "Το Alias Sale ακυρώθηκε με επιτυχία",
+  "success_alias_sell": "Το Alias ξεκίνησε με επιτυχία.",
+  "success_alias_update": "Το Alias ενημερώθηκε με επιτυχία.",
+  "verify_alias": "Επαλήθευση διαθεσιμότητας",
+  "verify_alias_description": "Πληκτρολογήστε το ψευδώνυμό σας και ελέγξτε τη διαθεσιμότητά του",
+  "view": "Για να δω",
+  "view_alias": "Δείτε το Alias"
 }
