--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -34,9 +34,9 @@
   "alias_sale": "Alias Sale",
   "alias_sale_cancellation": "Alias Sale Cancellation",
   "alias_transfer": "Alias Transfer",
-  "alias_off_sale" : "Not for sale",
-  "alias_on_sale_public" : "On Public Sale",
-  "alias_on_sale_private" : "On Private Sale",
+  "alias_off_sale": "Not for sale",
+  "alias_on_sale_public": "Public Offer",
+  "alias_on_sale_private": "Direct Offer",
   "alias_uri": "Alias Content",
   "aliases": "Aliases",
   "alias_content_format": "Content Format",
@@ -504,15 +504,16 @@
   "edit_alias_content": "Edit Content",
   "verify_alias": "Verify Availability",
   "verify_alias_description": "Type your alias name and check its availability",
-  "alias_taken": "This alias was taken already",
+  "alias_taken": "This Alias is taken already",
   "created": "Created",
-  "is_private_offer_q": "Is Private Offer?",
+  "is_private_offer_q": "Is Direct Offer?",
+  "is_private_offer_hint": "A Direct Offer is only available for a single recipient. The recipient will see the offer on his Alias list.",
   "enter_recipient": "Enter Address, Account Id or Alias Name",
   "alias_on_sale": "This Alias is on sale",
   "alias_cancel_sale": "Cancel Alias Sale",
-  "success_alias_cancel_sale": "Sale cancelled successfully",
+  "success_alias_cancel_sale": "Alias Sale cancelled successfully",
   "alias_direct_offer": "This Alias is a direct offer",
-  "success_alias_buy": "Congratz. You just bought a new Alias",
+  "success_alias_buy": "Congratulations. You just bought a new Alias.",
   "can-buy-alias": "The Alias is on sale and can be acquired. Click 'Buy' if you are willing to acquire the Alias",
   "more_alias_on": "More about Aliases on",
   "no_aliases_available": "No Aliases available",
