--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Cumple/compatible con SRC44",
-  "src44_info": "SRC44 es el estándar para información estructurada en campos de descripción. Otras aplicaciones también son capaces de visualizar esta información."
+  "src44_info": "SRC44 es el estándar para información estructurada en campos de descripción. Otras aplicaciones también son capaces de visualizar esta información.",
+  "account_details": "detalles de la cuenta",
+  "account_profile": "Perfil",
+  "alias_buyer": "Comprador",
+  "alias_cancel_sale": "Cancelar venta de alias",
+  "alias_content_format": "Formato de contenido",
+  "alias_direct_offer": "Este Alias es una oferta directa",
+  "alias_off_sale": "No para la venta",
+  "alias_on_sale": "Este Alias está en oferta",
+  "alias_on_sale_private": "Oferta Directa",
+  "alias_on_sale_public": "Oferta Pública",
+  "alias_price": "Precio",
+  "alias_ref": "Referencia de alias",
+  "alias_status": "Estado",
+  "alias_taken": "Este alias ya está tomado",
+  "asset_trade": "Opere en SignumSwap",
+  "can-buy-alias": "El Alias está a la venta y se puede adquirir. Haga clic en 'Comprar' si está dispuesto a adquirir el Alias",
+  "created": "Creado",
+  "edit_alias": "Editar alias",
+  "edit_alias_content": "Contenido editado",
+  "enter_account_id": "Ingrese la identificación de la cuenta",
+  "enter_alias_name": "Introduzca el nombre de alias",
+  "enter_alias_ref": "Ingrese el nombre de alias referenciado",
+  "enter_recipient": "Ingrese la dirección, ID de cuenta o nombre de alias",
+  "is_private_offer_q": "¿Es oferta directa?",
+  "more_alias_on": "Más sobre Alias en",
+  "is_private_offer_hint": "Una oferta directa solo está disponible para un único destinatario. El destinatario verá la oferta en su lista de Alias.",
+  "no_aliases_available": "No hay alias disponibles",
+  "owner": "Propietario",
+  "success_alias_buy": "Felicidades. Acabas de comprar un nuevo Alias.",
+  "success_alias_cancel_sale": "Venta de alias cancelada con éxito",
+  "success_alias_sell": "Alias puesto a la venta con éxito.",
+  "success_alias_update": "Alias actualizado con éxito.",
+  "verify_alias": "Verificar disponibilidad",
+  "verify_alias_description": "Escriba su nombre de alias y verifique su disponibilidad",
+  "view": "Para ver",
+  "view_alias": "Ver alias"
 }
