--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44-yhteensopiva/yhteensopiva",
-  "src44_info": "SRC44 on kuvauskenttien strukturoidun tiedon standardi. Muut sovellukset pystyvät myös visualisoimaan nämä tiedot."
+  "src44_info": "SRC44 on kuvauskenttien strukturoidun tiedon standardi. Muut sovellukset pystyvät myös visualisoimaan nämä tiedot.",
+  "account_details": "tilin tiedot",
+  "account_profile": "Profiili",
+  "alias_buyer": "Ostaja",
+  "alias_cancel_sale": "Peruuta aliasmyynti",
+  "alias_content_format": "Sisällön muoto",
+  "alias_direct_offer": "Tämä Alias on suora tarjous",
+  "alias_off_sale": "Ei myynnissä",
+  "alias_on_sale": "Tämä alias on myynnissä",
+  "alias_on_sale_private": "Suora tarjous",
+  "alias_on_sale_public": "Julkinen tarjous",
+  "alias_price": "Hinta",
+  "alias_ref": "Alias-viite",
+  "alias_status": "Tila",
+  "alias_taken": "Tämä alias on jo varattu",
+  "asset_trade": "Tee kauppaa SignumSwapilla",
+  "can-buy-alias": "Alias on myynnissä ja sen voi hankkia. Napsauta 'Osta', jos olet valmis hankkimaan aliaksen",
+  "created": "Luotu",
+  "edit_alias": "Muokkaa aliasta",
+  "edit_alias_content": "Muokkaa sisältöä",
+  "enter_account_id": "Anna tilin tunnus",
+  "enter_alias_name": "Anna aliaksen nimi",
+  "enter_alias_ref": "Anna viitatun aliaksen nimi",
+  "enter_recipient": "Anna osoite, tilin tunnus tai aliaksen nimi",
+  "is_private_offer_q": "Onko suora tarjous?",
+  "more_alias_on": "Lisää aliaksista osoitteessa",
+  "is_private_offer_hint": "Suora tarjous on saatavilla vain yhdelle vastaanottajalle. Vastaanottaja näkee tarjouksen aliasluettelossaan.",
+  "no_aliases_available": "Ei aliaksia saatavilla",
+  "owner": "Omistaja",
+  "success_alias_buy": "Onnittelut. Ostit juuri uuden aliaksen.",
+  "success_alias_cancel_sale": "Alias-myynti peruutettiin onnistuneesti",
+  "success_alias_sell": "Alias myytiin onnistuneesti.",
+  "success_alias_update": "Alias päivitetty onnistuneesti.",
+  "verify_alias": "Tarkista saatavuus",
+  "verify_alias_description": "Kirjoita aliasnimesi ja tarkista sen saatavuus",
+  "view": "Nähdä",
+  "view_alias": "Näytä alias"
 }
