--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Conforme/compatible SRC44",
-  "src44_info": "SRC44 est la norme pour les informations structurées dans les champs de description. D'autres applications sont également capables de visualiser ces informations."
+  "src44_info": "SRC44 est la norme pour les informations structurées dans les champs de description. D'autres applications sont également capables de visualiser ces informations.",
+  "account_details": "Détails du compte",
+  "account_profile": "Le profil",
+  "alias_buyer": "Acheteur",
+  "alias_cancel_sale": "Annuler la vente d'alias",
+  "alias_content_format": "Format du contenu",
+  "alias_direct_offer": "Cet Alias est une offre directe",
+  "alias_off_sale": "Pas à vendre",
+  "alias_on_sale": "Cet Alias est en vente",
+  "alias_on_sale_private": "Offre directe",
+  "alias_on_sale_public": "Offre publique",
+  "alias_price": "Prix",
+  "alias_ref": "Référence d'alias",
+  "alias_status": "Statut",
+  "alias_taken": "Cet alias est déjà pris",
+  "asset_trade": "Tradez sur SignumSwap",
+  "can-buy-alias": "L'Alias est en vente et peut être acquis. Cliquez sur \"Acheter\" si vous souhaitez acquérir l'Alias",
+  "created": "Établi",
+  "edit_alias": "Modifier l'alias",
+  "edit_alias_content": "Modifier le contenu",
+  "enter_account_id": "Entrez l'identifiant du compte",
+  "enter_alias_name": "Entrez le nom d'alias",
+  "enter_alias_ref": "Entrez le nom d'alias référencé",
+  "enter_recipient": "Entrez l'adresse, l'identifiant de compte ou le nom d'alias",
+  "is_private_offer_q": "est-ce que l'offre directe ?",
+  "more_alias_on": "En savoir plus sur les alias sur",
+  "is_private_offer_hint": "Une offre directe n'est disponible que pour un seul destinataire. Le destinataire verra l'offre sur sa liste d'Alias.",
+  "no_aliases_available": "Aucun alias disponible",
+  "owner": "Propriétaire",
+  "success_alias_buy": "Toutes nos félicitations. Vous venez d'acheter un nouvel Alias.",
+  "success_alias_cancel_sale": "Vente d'alias annulée avec succès",
+  "success_alias_sell": "Alias mis en vente avec succès.",
+  "success_alias_update": "Alias mis à jour avec succès.",
+  "verify_alias": "Vérifier la disponibilité",
+  "verify_alias_description": "Tapez votre nom d'alias et vérifiez sa disponibilité",
+  "view": "À voir",
+  "view_alias": "Afficher l'alias"
 }
