--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 compatible/compatible",
-  "src44_info": "SRC44 é o estándar para a información estruturada nos campos de descrición. Outras aplicacións tamén son capaces de visualizar esta información."
+  "src44_info": "SRC44 é o estándar para a información estruturada nos campos de descrición. Outras aplicacións tamén son capaces de visualizar esta información.",
+  "account_details": "Detalles da conta",
+  "account_profile": "Perfil",
+  "alias_buyer": "Comprador",
+  "alias_cancel_sale": "Cancelar a venda de alias",
+  "alias_content_format": "Formato de contido",
+  "alias_direct_offer": "Este Alias é unha oferta directa",
+  "alias_off_sale": "Non á venda",
+  "alias_on_sale": "Este alias está á venda",
+  "alias_on_sale_private": "Oferta directa",
+  "alias_on_sale_public": "Oferta Pública",
+  "alias_price": "Prezo",
+  "alias_ref": "Referencia de alias",
+  "alias_status": "Estado",
+  "alias_taken": "Este alias xa está tomado",
+  "asset_trade": "Comercio en SignumSwap",
+  "can-buy-alias": "O Alias está á venda e pódese adquirir. Fai clic en \"Comprar\" se estás disposto a adquirir o alias",
+  "created": "Creado",
+  "edit_alias": "Editar o alias",
+  "edit_alias_content": "Editar contido",
+  "enter_account_id": "Introduza o ID da conta",
+  "enter_alias_name": "Introduza o nome do alias",
+  "enter_alias_ref": "Introduza o nome de alias referenciado",
+  "enter_recipient": "Introduza o enderezo, o ID da conta ou o nome de alias",
+  "is_private_offer_q": "É unha oferta directa?",
+  "more_alias_on": "Máis información sobre os alias en",
+  "is_private_offer_hint": "Unha oferta directa só está dispoñible para un único destinatario. O destinatario verá a oferta na súa lista de alias.",
+  "no_aliases_available": "Non hai alias dispoñibles",
+  "owner": "Propietario",
+  "success_alias_buy": "Parabéns. Acabas de mercar un novo alias.",
+  "success_alias_cancel_sale": "A venda de alias cancelouse correctamente",
+  "success_alias_sell": "Púxose á venda o alias con éxito.",
+  "success_alias_update": "O alias actualizouse correctamente.",
+  "verify_alias": "Verifica a dispoñibilidade",
+  "verify_alias_description": "Escribe o teu nome de alias e comproba a súa dispoñibilidade",
+  "view": "Ver",
+  "view_alias": "Ver alias"
 }
