--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "एसआरसी44",
   "src44_compliant": "SRC44 आज्ञाकारी / संगत",
-  "src44_info": "विवरण क्षेत्रों में संरचित जानकारी के लिए SRC44 मानक है। अन्य ऐप्स भी इस जानकारी की कल्पना करने में सक्षम हैं।"
+  "src44_info": "विवरण क्षेत्रों में संरचित जानकारी के लिए SRC44 मानक है। अन्य ऐप्स भी इस जानकारी की कल्पना करने में सक्षम हैं।",
+  "account_details": "खाता विवरण",
+  "account_profile": "प्रोफ़ाइल",
+  "alias_buyer": "क्रेता",
+  "alias_cancel_sale": "उपनाम बिक्री रद्द करें",
+  "alias_content_format": "सामग्री प्रारूप",
+  "alias_direct_offer": "यह उपनाम एक प्रत्यक्ष प्रस्ताव है",
+  "alias_off_sale": "बिकाऊ नहीं है",
+  "alias_on_sale": "यह उपनाम बिक्री पर है",
+  "alias_on_sale_private": "प्रत्यक्ष प्रस्ताव",
+  "alias_on_sale_public": "सार्वजनिक प्रस्ताव",
+  "alias_price": "कीमत",
+  "alias_ref": "उपनाम संदर्भ",
+  "alias_status": "दर्जा",
+  "alias_taken": "यह उपनाम पहले ही लिया जा चुका है",
+  "asset_trade": "साइनमस्वैप पर ट्रेड करें",
+  "can-buy-alias": "उपनाम बिक्री पर है और इसे अधिग्रहित किया जा सकता है। यदि आप उपनाम प्राप्त करने के इच्छुक हैं तो 'खरीदें' पर क्लिक करें",
+  "created": "बनाया था",
+  "edit_alias": "उपनाम संपादित करें",
+  "edit_alias_content": "सामग्री संपादित करें",
+  "enter_account_id": "खाता आईडी दर्ज करें",
+  "enter_alias_name": "उपनाम नाम दर्ज करें",
+  "enter_alias_ref": "संदर्भित उपनाम नाम दर्ज करें",
+  "enter_recipient": "पता, खाता आईडी या उपनाम नाम दर्ज करें",
+  "is_private_offer_q": "डायरेक्ट ऑफर है?",
+  "more_alias_on": "उपनामों के बारे में अधिक जानकारी पर",
+  "is_private_offer_hint": "एक प्रत्यक्ष प्रस्ताव केवल एक प्राप्तकर्ता के लिए उपलब्ध है। प्राप्तकर्ता अपनी उपनाम सूची में ऑफ़र देखेगा।",
+  "no_aliases_available": "कोई उपनाम उपलब्ध नहीं है",
+  "owner": "स्वामी",
+  "success_alias_buy": "बधाई हो। आपने अभी-अभी एक नया उपनाम खरीदा है।",
+  "success_alias_cancel_sale": "उपनाम बिक्री सफलतापूर्वक रद्द कर दी गई",
+  "success_alias_sell": "उपनाम सफलतापूर्वक बिक्री पर सेट है।",
+  "success_alias_update": "उपनाम सफलतापूर्वक अपडेट किया गया।",
+  "verify_alias": "उपलब्धता सत्यापित करें",
+  "verify_alias_description": "अपना उपनाम नाम टाइप करें और इसकी उपलब्धता जांचें",
+  "view": "देखना",
+  "view_alias": "उपनाम देखें"
 }
