--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 sukladan/kompatibilan",
-  "src44_info": "SRC44 je standard za strukturirane informacije u poljima opisa. Druge aplikacije također mogu vizualizirati ove informacije."
+  "src44_info": "SRC44 je standard za strukturirane informacije u poljima opisa. Druge aplikacije također mogu vizualizirati ove informacije.",
+  "account_details": "Detalji Računa",
+  "account_profile": "Profil",
+  "alias_buyer": "Kupac",
+  "alias_cancel_sale": "Otkaži prodaju aliasa",
+  "alias_content_format": "Format sadržaja",
+  "alias_direct_offer": "Ovaj Alias je izravna ponuda",
+  "alias_off_sale": "Nije na prodaju",
+  "alias_on_sale": "Ovaj Alias je na rasprodaji",
+  "alias_on_sale_private": "Izravna ponuda",
+  "alias_on_sale_public": "Javna ponuda",
+  "alias_price": "Cijena",
+  "alias_ref": "Referenca pseudonima",
+  "alias_status": "Status",
+  "alias_taken": "Ovaj alias je već zauzet",
+  "asset_trade": "Trgujte na SignumSwapu",
+  "can-buy-alias": "Alias je na prodaju i može se nabaviti. Kliknite 'Kupi' ako ste voljni nabaviti alias",
+  "created": "Stvoreno",
+  "edit_alias": "Uredi alias",
+  "edit_alias_content": "Uredi sadržaj",
+  "enter_account_id": "Unesite ID računa",
+  "enter_alias_name": "Unesite pseudonim",
+  "enter_alias_ref": "Unesite referentni pseudonim",
+  "enter_recipient": "Unesite adresu, ID računa ili pseudonim",
+  "is_private_offer_q": "Je li izravna ponuda?",
+  "more_alias_on": "Više o aliasima na",
+  "is_private_offer_hint": "Izravna ponuda dostupna je samo za jednog primatelja. Primatelj će vidjeti ponudu na svom popisu pseudonima.",
+  "no_aliases_available": "Nema dostupnih pseudonima",
+  "owner": "Vlasnik",
+  "success_alias_buy": "Čestitamo. Upravo ste kupili novi Alias.",
+  "success_alias_cancel_sale": "Alias Sale je uspješno otkazan",
+  "success_alias_sell": "Alias je uspješno pušten u prodaju.",
+  "success_alias_update": "Alias je uspješno ažuriran.",
+  "verify_alias": "Provjerite dostupnost",
+  "verify_alias_description": "Upišite svoje alias ime i provjerite njegovu dostupnost",
+  "view": "Vidjeti",
+  "view_alias": "Prikaži Alias"
 }
