--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Sesuai/kompatibel dengan SRC44",
-  "src44_info": "SRC44 adalah standar untuk informasi terstruktur dalam kolom deskripsi. Aplikasi lain juga mampu memvisualisasikan informasi ini."
+  "src44_info": "SRC44 adalah standar untuk informasi terstruktur dalam kolom deskripsi. Aplikasi lain juga mampu memvisualisasikan informasi ini.",
+  "account_details": "Detail akun",
+  "account_profile": "Profil",
+  "alias_buyer": "Pembeli",
+  "alias_cancel_sale": "Batalkan Penjualan Alias",
+  "alias_content_format": "Format Konten",
+  "alias_direct_offer": "Alias ini adalah penawaran langsung",
+  "alias_off_sale": "Tidak untuk dijual",
+  "alias_on_sale": "Alias ini sedang diobral",
+  "alias_on_sale_private": "Penawaran Langsung",
+  "alias_on_sale_public": "Penawaran Umum",
+  "alias_price": "Harga",
+  "alias_ref": "Referensi Alias",
+  "alias_status": "Status",
+  "alias_taken": "Alias ini sudah diambil",
+  "asset_trade": "Berdagang di SignumSwap",
+  "can-buy-alias": "Alias sedang diobral dan dapat diperoleh. Klik 'Beli' jika Anda ingin mendapatkan Alias",
+  "created": "Dibuat",
+  "edit_alias": "Sunting Alias",
+  "edit_alias_content": "Mengedit Konten",
+  "enter_account_id": "Masukkan ID Akun",
+  "enter_alias_name": "Masukkan Nama Alias",
+  "enter_alias_ref": "Masukkan Nama Alias yang Direferensikan",
+  "enter_recipient": "Masukkan Alamat, ID Akun, atau Nama Alias",
+  "is_private_offer_q": "Apakah Penawaran Langsung?",
+  "more_alias_on": "Lebih lanjut tentang Alias di",
+  "is_private_offer_hint": "Penawaran Langsung hanya tersedia untuk satu penerima. Penerima akan melihat penawaran di daftar Alias-nya.",
+  "no_aliases_available": "Tidak ada Alias yang tersedia",
+  "owner": "Pemilik",
+  "success_alias_buy": "Selamat. Anda baru saja membeli Alias baru.",
+  "success_alias_cancel_sale": "Alias Sale berhasil dibatalkan",
+  "success_alias_sell": "Alias berhasil dijual.",
+  "success_alias_update": "Alias berhasil diperbarui.",
+  "verify_alias": "Verifikasi Ketersediaan",
+  "verify_alias_description": "Ketik nama alias Anda dan periksa ketersediaannya",
+  "view": "Untuk melihat",
+  "view_alias": "Lihat Alias"
 }
