--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Conforme/compatibile con SRC44",
-  "src44_info": "SRC44 è lo standard per le informazioni strutturate nei campi descrittivi. Anche altre app sono in grado di visualizzare queste informazioni."
+  "src44_info": "SRC44 è lo standard per le informazioni strutturate nei campi descrittivi. Anche altre app sono in grado di visualizzare queste informazioni.",
+  "account_details": "Dettagli account",
+  "account_profile": "Profilo",
+  "alias_buyer": "Acquirente",
+  "alias_cancel_sale": "Annulla la vendita di alias",
+  "alias_content_format": "Formato del contenuto",
+  "alias_direct_offer": "Questo Alias è un'offerta diretta",
+  "alias_off_sale": "Non in vendita",
+  "alias_on_sale": "Questo Alias è in vendita",
+  "alias_on_sale_private": "Offerta diretta",
+  "alias_on_sale_public": "Offerta pubblica",
+  "alias_price": "Prezzo",
+  "alias_ref": "Riferimento Alias",
+  "alias_status": "Stato",
+  "alias_taken": "Questo alias è già preso",
+  "asset_trade": "Fai trading su SignumSwap",
+  "can-buy-alias": "L'Alias è in vendita e può essere acquistato. Fare clic su \"Acquista\" se si desidera acquisire l'Alias",
+  "created": "Creato",
+  "edit_alias": "Modifica Alias",
+  "edit_alias_content": "Modifica contenuto",
+  "enter_account_id": "Inserisci l'ID account",
+  "enter_alias_name": "Immettere il nome dell'alias",
+  "enter_alias_ref": "Immettere il nome alias di riferimento",
+  "enter_recipient": "Inserisci l'indirizzo, l'ID account o il nome alias",
+  "is_private_offer_q": "è un'offerta diretta?",
+  "more_alias_on": "Ulteriori informazioni sugli alias su",
+  "is_private_offer_hint": "Un'offerta diretta è disponibile solo per un singolo destinatario. Il destinatario vedrà l'offerta nel suo elenco Alias.",
+  "no_aliases_available": "Nessun alias disponibile",
+  "owner": "Proprietario",
+  "success_alias_buy": "Congratulazioni. Hai appena comprato un nuovo Alias.",
+  "success_alias_cancel_sale": "La vendita di alias è stata annullata correttamente",
+  "success_alias_sell": "Alias messo in vendita con successo.",
+  "success_alias_update": "Alias aggiornato con successo.",
+  "verify_alias": "Verifica disponibilità",
+  "verify_alias_description": "Digita il tuo nome alias e verificane la disponibilità",
+  "view": "Vedere",
+  "view_alias": "Visualizza Alias"
 }
