--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44準拠/互換",
-  "src44_info": "SRC44 は、説明フィールドの構造化情報の標準です。他のアプリもこの情報を視覚化できます。"
+  "src44_info": "SRC44 は、説明フィールドの構造化情報の標準です。他のアプリもこの情報を視覚化できます。",
+  "account_details": "アカウント詳細",
+  "account_profile": "プロフィール",
+  "alias_buyer": "買い手",
+  "alias_cancel_sale": "エイリアスセールをキャンセル",
+  "alias_content_format": "コンテンツ形式",
+  "alias_direct_offer": "このエイリアスは直接オファーです",
+  "alias_off_sale": "非売品",
+  "alias_on_sale": "このエイリアスは販売中です",
+  "alias_on_sale_private": "直接オファー",
+  "alias_on_sale_public": "公募",
+  "alias_price": "価格",
+  "alias_ref": "エイリアス参照",
+  "alias_status": "状態",
+  "alias_taken": "このエイリアスは既に使用されています",
+  "asset_trade": "SignumSwapでトレード",
+  "can-buy-alias": "エイリアスは販売されており、取得できます。エイリアスを取得する場合は、[購入] をクリックします。",
+  "created": "作成した",
+  "edit_alias": "エイリアスを編集",
+  "edit_alias_content": "コンテンツの編集",
+  "enter_account_id": "アカウント ID を入力してください",
+  "enter_alias_name": "エイリアス名を入力",
+  "enter_alias_ref": "参照エイリアス名を入力",
+  "enter_recipient": "アドレス、アカウント ID、またはエイリアス名を入力してください",
+  "is_private_offer_q": "ダイレクトオファーですか？",
+  "more_alias_on": "エイリアスの詳細",
+  "is_private_offer_hint": "ダイレクト オファーは、1 人の受信者のみが利用できます。受信者のエイリアス リストにオファーが表示されます。",
+  "no_aliases_available": "エイリアスがありません",
+  "owner": "オーナー",
+  "success_alias_buy": "おめでとう。新しい Alias を購入しました。",
+  "success_alias_cancel_sale": "エイリアス セールは正常にキャンセルされました",
+  "success_alias_sell": "エイリアス セットの販売が成功しました。",
+  "success_alias_update": "エイリアスが正常に更新されました。",
+  "verify_alias": "可用性を確認する",
+  "verify_alias_description": "エイリアス名を入力し、その可用性を確認します",
+  "view": "見る",
+  "view_alias": "エイリアスを表示"
 }
