--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Suderinamas su SRC44 / suderinamas",
-  "src44_info": "SRC44 yra struktūrinės informacijos aprašo laukuose standartas. Kitos programos taip pat gali vizualizuoti šią informaciją."
+  "src44_info": "SRC44 yra struktūrinės informacijos aprašo laukuose standartas. Kitos programos taip pat gali vizualizuoti šią informaciją.",
+  "account_details": "Išsami sąskaitos informacija",
+  "account_profile": "Profilis",
+  "alias_buyer": "Pirkėjas",
+  "alias_cancel_sale": "Atšaukti slapyvardžio išpardavimą",
+  "alias_content_format": "Turinio formatas",
+  "alias_direct_offer": "Šis slapyvardis yra tiesioginis pasiūlymas",
+  "alias_off_sale": "Ne pardavimui",
+  "alias_on_sale": "Šis slapyvardis parduodamas",
+  "alias_on_sale_private": "Tiesioginis pasiūlymas",
+  "alias_on_sale_public": "Viešas pasiūlymas",
+  "alias_price": "Kaina",
+  "alias_ref": "Pseudonimo nuoroda",
+  "alias_status": "Būsena",
+  "alias_taken": "Šis slapyvardis jau užimtas",
+  "asset_trade": "Prekyba SignumSwap",
+  "can-buy-alias": "Pseudonimas parduodamas ir jį galima įsigyti. Spustelėkite „Pirkti“, jei norite įsigyti slapyvardį",
+  "created": "Sukurta",
+  "edit_alias": "Redaguoti slapyvardį",
+  "edit_alias_content": "Redaguoti turinį",
+  "enter_account_id": "Įveskite sąskaitos ID",
+  "enter_alias_name": "Įveskite slapyvardžio pavadinimą",
+  "enter_alias_ref": "Įveskite nuorodos slapyvardžio pavadinimą",
+  "enter_recipient": "Įveskite adresą, paskyros ID arba slapyvardžio pavadinimą",
+  "is_private_offer_q": "Ar tiesioginis pasiūlymas?",
+  "more_alias_on": "Daugiau apie slapyvardžius",
+  "is_private_offer_hint": "Tiesioginis pasiūlymas galimas tik vienam gavėjui. Gavėjas matys pasiūlymą savo slapyvardžių sąraše.",
+  "no_aliases_available": "Nėra slapyvardžių",
+  "owner": "Savininkas",
+  "success_alias_buy": "Sveikinu. Ką tik nusipirkote naują slapyvardį.",
+  "success_alias_cancel_sale": "Slapyvardžio išpardavimas sėkmingai atšauktas",
+  "success_alias_sell": "Pseudonimas sėkmingai parduotas.",
+  "success_alias_update": "Pseudonimas sėkmingai atnaujintas.",
+  "verify_alias": "Patikrinkite prieinamumą",
+  "verify_alias_description": "Įveskite savo slapyvardį ir patikrinkite jo prieinamumą",
+  "view": "Matyti",
+  "view_alias": "Žiūrėti slapyvardį"
 }
