--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44-compatibel/compatibel",
-  "src44_info": "SRC44 is de standaard voor gestructureerde informatie in beschrijvingsvelden. Andere apps kunnen deze informatie ook visualiseren."
+  "src44_info": "SRC44 is de standaard voor gestructureerde informatie in beschrijvingsvelden. Andere apps kunnen deze informatie ook visualiseren.",
+  "account_details": "Accountgegevens",
+  "account_profile": "Profiel",
+  "alias_buyer": "Koper",
+  "alias_cancel_sale": "Aliasverkoop annuleren",
+  "alias_content_format": "Inhoud formaat",
+  "alias_direct_offer": "Deze Alias is een direct aanbod",
+  "alias_off_sale": "Niet te koop",
+  "alias_on_sale": "Deze Alias is te koop",
+  "alias_on_sale_private": "Directe aanbieding",
+  "alias_on_sale_public": "Openbare aanbieding",
+  "alias_price": "Prijs",
+  "alias_ref": "Alias-referentie",
+  "alias_status": "Toestand",
+  "alias_taken": "Deze alias is al in gebruik",
+  "asset_trade": "Handel op SignumSwap",
+  "can-buy-alias": "De Alias is te koop en kan worden verworven. Klik op 'Kopen' als u bereid bent de alias te kopen",
+  "created": "Gemaakt",
+  "edit_alias": "Alias bewerken",
+  "edit_alias_content": "Inhoud bewerken",
+  "enter_account_id": "Voer account-ID in",
+  "enter_alias_name": "Voer aliasnaam in",
+  "enter_alias_ref": "Voer de naam van de alias waarnaar wordt verwezen in",
+  "enter_recipient": "Voer adres, account-ID of aliasnaam in",
+  "is_private_offer_q": "Is direct aanbod?",
+  "more_alias_on": "Meer over Aliassen op",
+  "is_private_offer_hint": "Een directe aanbieding is alleen beschikbaar voor één ontvanger. De ontvanger ziet de aanbieding op zijn Alias-lijst.",
+  "no_aliases_available": "Geen aliassen beschikbaar",
+  "owner": "Baasje",
+  "success_alias_buy": "Gefeliciteerd. U heeft zojuist een nieuwe Alias gekocht.",
+  "success_alias_cancel_sale": "Alias-verkoop succesvol geannuleerd",
+  "success_alias_sell": "Alias succesvol in de verkoop gezet.",
+  "success_alias_update": "Alias succesvol bijgewerkt.",
+  "verify_alias": "Beschikbaarheid controleren",
+  "verify_alias_description": "Typ uw aliasnaam en controleer de beschikbaarheid",
+  "view": "Zien",
+  "view_alias": "Alias bekijken"
 }
