--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Zgodny/kompatybilny z SRC44",
-  "src44_info": "SRC44 to standard ustrukturyzowanych informacji w polach opisu. Inne aplikacje mogą również wizualizować te informacje."
+  "src44_info": "SRC44 to standard ustrukturyzowanych informacji w polach opisu. Inne aplikacje mogą również wizualizować te informacje.",
+  "account_details": "Szczegóły Konta",
+  "account_profile": "Profil",
+  "alias_buyer": "Kupujący",
+  "alias_cancel_sale": "Anuluj sprzedaż aliasów",
+  "alias_content_format": "Format treści",
+  "alias_direct_offer": "Ten alias jest ofertą bezpośrednią",
+  "alias_off_sale": "Nie na sprzedaż",
+  "alias_on_sale": "Ten alias jest na sprzedaż",
+  "alias_on_sale_private": "Oferta bezpośrednia",
+  "alias_on_sale_public": "Oferta publiczna",
+  "alias_price": "Cena",
+  "alias_ref": "Odniesienie do aliasu",
+  "alias_status": "Status",
+  "alias_taken": "Ten alias jest już zajęty",
+  "asset_trade": "Handluj na SignumSwap",
+  "can-buy-alias": "Alias jest na sprzedaż i można go kupić. Kliknij „Kup”, jeśli chcesz nabyć alias",
+  "created": "Utworzony",
+  "edit_alias": "Edytuj alias",
+  "edit_alias_content": "Edytuj zawartość",
+  "enter_account_id": "Wprowadź identyfikator konta",
+  "enter_alias_name": "Wprowadź nazwę aliasu",
+  "enter_alias_ref": "Wprowadź nazwę aliasu odniesienia",
+  "enter_recipient": "Wprowadź adres, identyfikator konta lub nazwę aliasu",
+  "is_private_offer_q": "Czy oferta bezpośrednia?",
+  "more_alias_on": "Więcej o aliasach na",
+  "is_private_offer_hint": "Oferta bezpośrednia jest dostępna tylko dla jednego odbiorcy. Odbiorca zobaczy ofertę na swojej liście aliasów.",
+  "no_aliases_available": "Brak dostępnych aliasów",
+  "owner": "Właściciel",
+  "success_alias_buy": "Gratulacje. Właśnie kupiłeś nowy Alias.",
+  "success_alias_cancel_sale": "Pomyślnie anulowano sprzedaż aliasów",
+  "success_alias_sell": "Alias wystawiony na sprzedaż pomyślnie.",
+  "success_alias_update": "Alias został pomyślnie zaktualizowany.",
+  "verify_alias": "Sprawdź dostępność",
+  "verify_alias_description": "Wpisz swoją nazwę aliasu i sprawdź jego dostępność",
+  "view": "Zobaczyć",
+  "view_alias": "Wyświetl alias"
 }
