--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 compatível/compatível",
-  "src44_info": "SRC44 é o padrão para informações estruturadas em campos de descrição. Outros aplicativos também são capazes de visualizar essas informações."
+  "src44_info": "SRC44 é o padrão para informações estruturadas em campos de descrição. Outros aplicativos também são capazes de visualizar essas informações.",
+  "account_details": "Detalhes da conta",
+  "account_profile": "Perfil",
+  "alias_buyer": "Comprador",
+  "alias_cancel_sale": "Cancelar venda de alias",
+  "alias_content_format": "Formato de conteúdo",
+  "alias_direct_offer": "Este Alias é uma oferta direta",
+  "alias_off_sale": "Não está a venda",
+  "alias_on_sale": "Este Alias está à venda",
+  "alias_on_sale_private": "Oferta Direta",
+  "alias_on_sale_public": "Oferta Pública",
+  "alias_price": "Preço",
+  "alias_ref": "Referência de alias",
+  "alias_status": "Status",
+  "alias_taken": "Este pseudônimo já foi usado",
+  "asset_trade": "Negocie no SignumSwap",
+  "can-buy-alias": "O Alias está à venda e pode ser adquirido. Clique em 'Comprar' se você estiver disposto a adquirir o Alias",
+  "created": "Criada",
+  "edit_alias": "Editar apelido",
+  "edit_alias_content": "Editar conteúdo",
+  "enter_account_id": "Insira o ID da conta",
+  "enter_alias_name": "Digite o nome alternativo",
+  "enter_alias_ref": "Digite o nome do alias referenciado",
+  "enter_recipient": "Digite o endereço, o ID da conta ou o nome do alias",
+  "is_private_offer_q": "é oferta direta?",
+  "more_alias_on": "Mais sobre Aliases em",
+  "is_private_offer_hint": "Uma Oferta Direta está disponível apenas para um único destinatário. O destinatário verá a oferta em sua lista de Alias.",
+  "no_aliases_available": "Nenhum pseudônimo disponível",
+  "owner": "Proprietário",
+  "success_alias_buy": "Parabéns. Você acabou de comprar um novo Alias.",
+  "success_alias_cancel_sale": "Venda de alias cancelada com sucesso",
+  "success_alias_sell": "Alias colocado à venda com sucesso.",
+  "success_alias_update": "Alias atualizado com sucesso.",
+  "verify_alias": "Verificar disponibilidade",
+  "verify_alias_description": "Digite seu nome de alias e verifique sua disponibilidade",
+  "view": "Ver",
+  "view_alias": "Ver pseudônimo"
 }
