--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "Conform/compatibil cu SRC44",
-  "src44_info": "SRC44 este standardul pentru informațiile structurate în câmpurile de descriere. Alte aplicații sunt capabile să vizualizeze și aceste informații."
+  "src44_info": "SRC44 este standardul pentru informațiile structurate în câmpurile de descriere. Alte aplicații sunt capabile să vizualizeze și aceste informații.",
+  "account_details": "Detalii cont",
+  "account_profile": "Profil",
+  "alias_buyer": "Cumpărător",
+  "alias_cancel_sale": "Anulează vânzarea de alias",
+  "alias_content_format": "Format de conținut",
+  "alias_direct_offer": "Acest Alias este o ofertă directă",
+  "alias_off_sale": "Nu este de vanzare",
+  "alias_on_sale": "Acest alias este la vânzare",
+  "alias_on_sale_private": "Oferta directa",
+  "alias_on_sale_public": "Oferta Publica",
+  "alias_price": "Preț",
+  "alias_ref": "Alias de referință",
+  "alias_status": "stare",
+  "alias_taken": "Acest alias este deja luat",
+  "asset_trade": "Tranzacționează pe SignumSwap",
+  "can-buy-alias": "Aliasul este în vânzare și poate fi achiziționat. Faceți clic pe „Cumpărați” dacă doriți să achiziționați aliasul",
+  "created": "Creată",
+  "edit_alias": "Editați aliasul",
+  "edit_alias_content": "Editați conținutul",
+  "enter_account_id": "Introduceți ID-ul contului",
+  "enter_alias_name": "Introduceți numele alias",
+  "enter_alias_ref": "Introduceți numele alias referit",
+  "enter_recipient": "Introduceți Adresa, ID-ul contului sau Numele alias",
+  "is_private_offer_q": "Este oferta directa?",
+  "more_alias_on": "Mai multe despre Alias pe",
+  "is_private_offer_hint": "O ofertă directă este disponibilă doar pentru un singur destinatar. Destinatarul va vedea oferta pe lista sa de alias.",
+  "no_aliases_available": "Nu există aliasuri disponibile",
+  "owner": "Proprietar",
+  "success_alias_buy": "Felicitări. Tocmai ai cumpărat un alias nou.",
+  "success_alias_cancel_sale": "Vânzarea alias a fost anulată cu succes",
+  "success_alias_sell": "Alias pus în vânzare cu succes.",
+  "success_alias_update": "Aliasul a fost actualizat cu succes.",
+  "verify_alias": "Verificați disponibilitatea",
+  "verify_alias_description": "Introduceți numele alias-ului și verificați disponibilitatea acestuia",
+  "view": "A vedea",
+  "view_alias": "Vedeți Alias"
 }
