--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44-совместимый/совместимый",
-  "src44_info": "SRC44 — это стандарт для структурированной информации в полях описания. Другие приложения также способны визуализировать эту информацию."
+  "src44_info": "SRC44 — это стандарт для структурированной информации в полях описания. Другие приложения также способны визуализировать эту информацию.",
+  "account_details": "Детали учетной записи",
+  "account_profile": "Профиль",
+  "alias_buyer": "Покупатель",
+  "alias_cancel_sale": "Отменить продажу псевдонимов",
+  "alias_content_format": "Формат контента",
+  "alias_direct_offer": "Этот псевдоним является прямым предложением",
+  "alias_off_sale": "Не продается",
+  "alias_on_sale": "Этот псевдоним продается",
+  "alias_on_sale_private": "Прямое предложение",
+  "alias_on_sale_public": "Публичная оферта",
+  "alias_price": "Цена",
+  "alias_ref": "Ссылка на псевдоним",
+  "alias_status": "Положение дел",
+  "alias_taken": "Этот псевдоним уже занят",
+  "asset_trade": "Торгуйте на SignumSwap",
+  "can-buy-alias": "Псевдоним продается и может быть приобретен. Нажмите «Купить», если вы хотите приобрести псевдоним.",
+  "created": "Созданный",
+  "edit_alias": "Изменить псевдоним",
+  "edit_alias_content": "Редактировать содержимое",
+  "enter_account_id": "Введите идентификатор учетной записи",
+  "enter_alias_name": "Введите псевдоним",
+  "enter_alias_ref": "Введите ссылочное имя псевдонима",
+  "enter_recipient": "Введите адрес, идентификатор учетной записи или псевдоним",
+  "is_private_offer_q": "Прямое предложение?",
+  "more_alias_on": "Подробнее о псевдонимах на",
+  "is_private_offer_hint": "Прямое предложение доступно только для одного получателя. Получатель увидит предложение в своем списке псевдонимов.",
+  "no_aliases_available": "Нет доступных псевдонимов",
+  "owner": "Владелец",
+  "success_alias_buy": "Поздравляем. Вы только что купили новый псевдоним.",
+  "success_alias_cancel_sale": "Продажа псевдонимов успешно отменена",
+  "success_alias_sell": "Псевдоним успешно выставлен на продажу.",
+  "success_alias_update": "Псевдоним успешно обновлен.",
+  "verify_alias": "Проверить доступность",
+  "verify_alias_description": "Введите псевдоним и проверьте его доступность.",
+  "view": "Увидеть",
+  "view_alias": "Посмотреть псевдоним"
 }
