--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 kompatibilný/kompatibilný",
-  "src44_info": "SRC44 je štandard pre štruktúrované informácie v poliach popisu. Iné aplikácie sú tiež schopné zobraziť tieto informácie."
+  "src44_info": "SRC44 je štandard pre štruktúrované informácie v poliach popisu. Iné aplikácie sú tiež schopné zobraziť tieto informácie.",
+  "account_details": "detaily účtu",
+  "account_profile": "Profil",
+  "alias_buyer": "kupujúci",
+  "alias_cancel_sale": "Zrušiť predaj aliasu",
+  "alias_content_format": "Formát obsahu",
+  "alias_direct_offer": "Tento alias je priama ponuka",
+  "alias_off_sale": "Nie je na predaj",
+  "alias_on_sale": "Tento alias je v predaji",
+  "alias_on_sale_private": "Priama ponuka",
+  "alias_on_sale_public": "Verejná ponuka",
+  "alias_price": "cena",
+  "alias_ref": "Odkaz na alias",
+  "alias_status": "Postavenie",
+  "alias_taken": "Tento alias je už použitý",
+  "asset_trade": "Obchodujte na SignumSwap",
+  "can-buy-alias": "Alias je v predaji a je možné ho získať. Kliknite na 'Kúpiť', ak chcete získať alias",
+  "created": "Vytvorené",
+  "edit_alias": "Upraviť alias",
+  "edit_alias_content": "Upraviť obsah",
+  "enter_account_id": "Zadajte ID účtu",
+  "enter_alias_name": "Zadajte názov aliasu",
+  "enter_alias_ref": "Zadajte názov odkazovaného aliasu",
+  "enter_recipient": "Zadajte adresu, ID účtu alebo alias",
+  "is_private_offer_q": "Je priama ponuka?",
+  "more_alias_on": "Viac o aliasoch na",
+  "is_private_offer_hint": "Priama ponuka je dostupná len pre jedného príjemcu. Príjemcovi sa ponuka zobrazí vo svojom zozname aliasov.",
+  "no_aliases_available": "Nie sú k dispozícii žiadne aliasy",
+  "owner": "Vlastník",
+  "success_alias_buy": "gratulujem. Práve ste si kúpili nový alias.",
+  "success_alias_cancel_sale": "Predaj aliasu bol úspešne zrušený",
+  "success_alias_sell": "Alias bol úspešne nastavený na predaj.",
+  "success_alias_update": "Alias bol úspešne aktualizovaný.",
+  "verify_alias": "Overte dostupnosť",
+  "verify_alias_description": "Zadajte názov svojho aliasu a skontrolujte jeho dostupnosť",
+  "view": "Vidieť",
+  "view_alias": "Zobraziť alias"
 }
