--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -481,5 +481,41 @@
   "json": "ЈСОН",
   "src44": "СРЦ44",
   "src44_compliant": "СРЦ44 компатибилан/компатибилан",
-  "src44_info": "СРЦ44 је стандард за структуриране информације у пољима описа. Друге апликације такође могу да визуелизују ове информације."
+  "src44_info": "СРЦ44 је стандард за структуриране информације у пољима описа. Друге апликације такође могу да визуелизују ове информације.",
+  "account_details": "детаљи о рачуну",
+  "account_profile": "Профил",
+  "alias_buyer": "Купац",
+  "alias_cancel_sale": "Откажите продају алијаса",
+  "alias_content_format": "Формат садржаја",
+  "alias_direct_offer": "Овај алиас је директна понуда",
+  "alias_off_sale": "Није на продају",
+  "alias_on_sale": "Овај алиас је на распродаји",
+  "alias_on_sale_private": "Директна понуда",
+  "alias_on_sale_public": "Јавна понуда",
+  "alias_price": "Цена",
+  "alias_ref": "Алиас Референце",
+  "alias_status": "Статус",
+  "alias_taken": "Овај алиас је већ заузет",
+  "asset_trade": "Тргујте на СигнумСвап-у",
+  "can-buy-alias": "Алиас је на продају и може се набавити. Кликните на „Купи“ ако сте вољни да набавите псеудоним",
+  "created": "Цреатед",
+  "edit_alias": "Уреди псеудоним",
+  "edit_alias_content": "Уреди садржај",
+  "enter_account_id": "Унесите ИД налога",
+  "enter_alias_name": "Унесите псеудоним",
+  "enter_alias_ref": "Унесите референцирано име",
+  "enter_recipient": "Унесите адресу, ИД налога или псеудоним",
+  "is_private_offer_q": "Да ли је директна понуда?",
+  "more_alias_on": "Више о алиасима на",
+  "is_private_offer_hint": "Директна понуда је доступна само за једног примаоца. Прималац ће видети понуду на својој листи алијаса.",
+  "no_aliases_available": "Нема доступних алиаса",
+  "owner": "Власник",
+  "success_alias_buy": "Честитам. Управо сте купили нови алиас.",
+  "success_alias_cancel_sale": "Алиас Сале је успешно отказан",
+  "success_alias_sell": "Алиас је успешно пуштен у продају.",
+  "success_alias_update": "Алиас је успешно ажуриран.",
+  "verify_alias": "Верифи Аваилабилити",
+  "verify_alias_description": "Унесите своје псеудоним и проверите његову доступност",
+  "view": "Видети",
+  "view_alias": "Виев Алиас"
 }
