--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 uyumlu/uyumlu",
-  "src44_info": "SRC44, açıklama alanlarındaki yapılandırılmış bilgiler için standarttır. Diğer Uygulamalar da bu bilgiyi görselleştirebilir."
+  "src44_info": "SRC44, açıklama alanlarındaki yapılandırılmış bilgiler için standarttır. Diğer Uygulamalar da bu bilgiyi görselleştirebilir.",
+  "account_details": "hesap detayları",
+  "account_profile": "Profil",
+  "alias_buyer": "Alıcı",
+  "alias_cancel_sale": "Takma Ad Satışını İptal Et",
+  "alias_content_format": "İçerik Formatı",
+  "alias_direct_offer": "Bu takma ad doğrudan bir tekliftir",
+  "alias_off_sale": "Satılık değil",
+  "alias_on_sale": "Bu takma ad indirimde",
+  "alias_on_sale_private": "Doğrudan Teklif",
+  "alias_on_sale_public": "halka arz",
+  "alias_price": "Fiyat",
+  "alias_ref": "Takma Ad Referansı",
+  "alias_status": "Durum",
+  "alias_taken": "Bu takma ad zaten alınmış",
+  "asset_trade": "SignumSwap'te işlem yapın",
+  "can-buy-alias": "Takma ad satıştadır ve edinilebilir. Takma Adı almak istiyorsanız 'Satın Al'ı tıklayın",
+  "created": "oluşturuldu",
+  "edit_alias": "Takma Adı Düzenle",
+  "edit_alias_content": "İçeriği Düzenle",
+  "enter_account_id": "Hesap Kimliğini Girin",
+  "enter_alias_name": "Takma Adı Girin",
+  "enter_alias_ref": "Başvurulan Takma Adı Girin",
+  "enter_recipient": "Adres, Hesap Kimliği veya Takma Ad Girin",
+  "is_private_offer_q": "Doğrudan Teklif mi?",
+  "more_alias_on": "Takma adlar hakkında daha fazla bilgi",
+  "is_private_offer_hint": "Doğrudan Teklif, yalnızca tek bir alıcı için kullanılabilir. Alıcı, teklifi Alias listesinde görecektir.",
+  "no_aliases_available": "Takma ad yok",
+  "owner": "Mal sahibi",
+  "success_alias_buy": "Tebrikler. Yeni bir Takma Ad satın aldınız.",
+  "success_alias_cancel_sale": "Takma ad satışı başarıyla iptal edildi",
+  "success_alias_sell": "Takma ad başarıyla satışa sunuldu.",
+  "success_alias_update": "Takma ad başarıyla güncellendi.",
+  "verify_alias": "Müsaitliği Doğrula",
+  "verify_alias_description": "Takma adınızı yazın ve uygun olup olmadığını kontrol edin",
+  "view": "Görmek",
+  "view_alias": "Takma Adı Görüntüle"
 }
