--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 сумісний/сумісний",
-  "src44_info": "SRC44 є стандартом для структурованої інформації в полях опису. Інші програми також можуть візуалізувати цю інформацію."
+  "src44_info": "SRC44 є стандартом для структурованої інформації в полях опису. Інші програми також можуть візуалізувати цю інформацію.",
+  "account_details": "Реквізити облікового запису",
+  "account_profile": "Профіль",
+  "alias_buyer": "Покупець",
+  "alias_cancel_sale": "Скасувати продаж псевдонімів",
+  "alias_content_format": "Формат вмісту",
+  "alias_direct_offer": "Цей псевдонім є прямою пропозицією",
+  "alias_off_sale": "Не продається",
+  "alias_on_sale": "Цей псевдонім продається",
+  "alias_on_sale_private": "Пряма пропозиція",
+  "alias_on_sale_public": "Публічна оферта",
+  "alias_price": "Ціна",
+  "alias_ref": "Посилання на псевдонім",
+  "alias_status": "Статус",
+  "alias_taken": "Цей псевдонім уже зайнятий",
+  "asset_trade": "Торгуйте на SignumSwap",
+  "can-buy-alias": "Псевдонім продається та може бути придбаний. Натисніть «Купити», якщо ви бажаєте придбати псевдонім",
+  "created": "Створено",
+  "edit_alias": "Редагувати псевдонім",
+  "edit_alias_content": "Редагувати вміст",
+  "enter_account_id": "Введіть ідентифікатор облікового запису",
+  "enter_alias_name": "Введіть псевдонім",
+  "enter_alias_ref": "Введіть посилання на псевдонім",
+  "enter_recipient": "Введіть адресу, ідентифікатор облікового запису або псевдонім",
+  "is_private_offer_q": "Пряма пропозиція?",
+  "more_alias_on": "Докладніше про псевдоніми див",
+  "is_private_offer_hint": "Пряма пропозиція доступна лише для одного одержувача. Одержувач побачить пропозицію у своєму списку псевдонімів.",
+  "no_aliases_available": "Немає доступних псевдонімів",
+  "owner": "Власник",
+  "success_alias_buy": "Вітаю. Ви щойно купили новий псевдонім.",
+  "success_alias_cancel_sale": "Продаж псевдонімів успішно скасовано",
+  "success_alias_sell": "Псевдонім успішно виставлений на продаж.",
+  "success_alias_update": "Псевдонім успішно оновлено.",
+  "verify_alias": "Перевірте наявність",
+  "verify_alias_description": "Введіть свій псевдонім і перевірте його доступність",
+  "view": "Бачити",
+  "view_alias": "Переглянути псевдонім"
 }
