--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -481,5 +481,41 @@
   "json": "JSON",
   "src44": "SRC44",
   "src44_compliant": "SRC44 兼容/兼容",
-  "src44_info": "SRC44 是描述字段中结构化信息的标准。其他应用程序也能够可视化此信息。"
+  "src44_info": "SRC44 是描述字段中结构化信息的标准。其他应用程序也能够可视化此信息。",
+  "account_details": "帐户详细资料",
+  "account_profile": "轮廓",
+  "alias_buyer": "买方",
+  "alias_cancel_sale": "取消别名销售",
+  "alias_content_format": "内容格式",
+  "alias_direct_offer": "此别名是直接报价",
+  "alias_off_sale": "不作为产品销售",
+  "alias_on_sale": "此别名有售",
+  "alias_on_sale_private": "直接报价",
+  "alias_on_sale_public": "公开发售",
+  "alias_price": "价格",
+  "alias_ref": "别名参考",
+  "alias_status": "状态",
+  "alias_taken": "此别名已被使用",
+  "asset_trade": "在 SignumSwap 上交易",
+  "can-buy-alias": "Alias 现已发售，可以购买。如果您愿意获得别名，请点击“购买”",
+  "created": "已创建",
+  "edit_alias": "编辑别名",
+  "edit_alias_content": "编辑内容",
+  "enter_account_id": "输入帐户 ID",
+  "enter_alias_name": "输入别名",
+  "enter_alias_ref": "输入参考别名",
+  "enter_recipient": "输入地址、账户 ID 或别名",
+  "is_private_offer_q": "是直接报价吗？",
+  "more_alias_on": "有关别名的更多信息",
+  "is_private_offer_hint": "直接报价仅适用于单个收件人。收件人将在他的别名列表中看到该报价。",
+  "no_aliases_available": "没有可用的别名",
+  "owner": "所有者",
+  "success_alias_buy": "恭喜。您刚刚购买了新的 Alias。",
+  "success_alias_cancel_sale": "别名销售成功取消",
+  "success_alias_sell": "Alias 成功设置销售。",
+  "success_alias_update": "别名更新成功。",
+  "verify_alias": "验证可用性",
+  "verify_alias_description": "输入您的别名并检查其可用性",
+  "view": "查看",
+  "view_alias": "查看别名"
 }
